DealsAndOffer Component added and fix the Container alignments

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --bg: #f7fafc;
   --bg-secondary: #fff0df;
   --gray: #f3f4f6;
+  --bg-gray: #606060;
   --text: #1c1c1c;
   --sub-text: #8b96af;
   --border: #dee2e7;
